--- a/03-css/06-media-queries.css
+++ b/03-css/06-media-queries.css
@@ -1,3 +1,42 @@
+nav {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  background-color: var(--black);
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+nav ul li {
+  display: inline-block;
+  list-style-type: none;
+}
+
+nav ul li a {
+  display: block;
+  margin: 10px 10px;
+  padding: 10px;
+  color: var(--white);
+  text-decoration: none;
+}
+li:hover {
+  background-color: var(--gray1);
+}
+
+.main {
+  margin-top: 100px;
+  padding: 0 12px;
+}
+
+@media (min-width: 415px) and (max-width: 1024px) {
+  body {
+    background: var(--orange);
+  }
+}
+
 @media (min-width: 1024px) {
   body {
     background: var(--green);
