--- a/04-flexbox/07-flexbox.css
+++ b/04-flexbox/07-flexbox.css
@@ -2,17 +2,45 @@
   background-color: rgb(190, 190, 231);
 }
 
-/* Flex Container 1 */
+.flex-container-1 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 
-/* Flex Container 2 */
+.flex-container-2 {
+  display: flex;
+  flex-flow: row-reverse wrap;
+}
 
-/* Flex Container 3 */
+.flex-container-3 {
+  height: 400px;
+  display: flex;
+  flex-flow: column-reverse wrap;
+  align-items: flex-end;
+}
 
-/* use height: 400px; on the container */
+.flex-container-4 {
+  display: flex;
+  flex-flow: row wrap-reverse;
+  justify-content: space-evenly;
+}
 
-/* Flex Container 4 */
+.flex-container-5 {
+  display: flex;
+  align-items: center;
+}
 
-/* Flex Container 5 */
+.flex-container-5 .item1,
+.flex-container-5 .item3,
+.flex-container-5 .item6 {
+  height: 150px;
+}
+
+.flex-container-5 .item2,
+.flex-container-5 .item8 {
+  height: 250px;
+}
 
 /* Flex Container 6 */
 
@@ -20,4 +48,9 @@
   width: 400px;
 }
 
-/* use height: 300px; on the container */
+.flex-container-6 {
+  height: 300px;
+  display: flex;
+  flex-flow: column wrap;
+}
+
