--- a/05-css-grid/02-grid-areas.css
+++ b/05-css-grid/02-grid-areas.css
@@ -1,24 +1,45 @@
-.header {
-  grid-area: header;
-}
-
-.article {
-  grid-area: article;
-}
-
 .grid-container {
+  background-color: rgb(190, 190, 231);
+}
+
+.grid-container-1 {
   display: grid;
-  height: 97vh;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(8, 1fr);
+  grid-template-columns: 1fr 3fr 3fr;
   gap: 10px;
-  grid-template-areas:
-    'header'
-    'article'
-    'article'
-    'section'
-    'section'
-    'section'
-    'aside'
-    'footer';
+}
+
+.grid-container-2 {
+  height: 400px;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr 1fr;
+  grid-template-rows: 1fr 4fr;
+  gap: 10px;
+}
+
+.grid-container-3 {
+  height: 400px;
+  display: grid;
+  grid-template-columns: 1fr 3fr 3fr;
+  grid-template-rows: 1fr 3fr 3fr;
+  gap: 10px;
+}
+
+.grid-container-3 .item8 {
+  grid-column: span 2;
+}
+
+.grid-container-4 {
+  height: 600px;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 2fr 1fr 1fr;
+  gap: 10px;
+}
+
+.grid-container-4 .item1 {
+  grid-row: span 2;
+}
+
+.grid-container-4 .item6 {
+  grid-column: span 2;
 }
